hosts refer from env